Y axis scrollbar, fixed confidence for consequences (was not showing)

--- a/style/main.css
+++ b/style/main.css
@@ -123,6 +123,7 @@ svg {
 
 .up_pftv_track-header {
     background-color: #d9faff;
+	overflow-y: auto;
     /*line-height: 1.6em;
     margin: .05em 0;*/
 }
